# agent-engine-mvp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent_engine/: __init__.py
agent_engine/adapters/cli/: main.py
agent_engine/adapters/web_fastapi/: app.py
agent_engine/engine/: __init__.py  agent.py  llm.py  models.py  session.py
agent_engine/memory/: __init__.py  in_memory.py  interface.py
agent_engine/skills/: __init__.py  doc_qa.py  gpu_diagnosis.py  interface.py  router.py
agent_engine/tools/: __init__.py  builtins.py  registry.py
agent_engine/tracing/: __init__.py  interface.py  jsonl_tracer.py
tests/: conftest.py  test_engine.py  test_integration_openai.py  test_router.py  test_tool_registry.py
