[project]
name = "agent-engine"
version = "0.1.0"
description = "Minimal agent runtime with session, tools, memory (RAG), and tracing"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "openai>=1.0,<2.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
]

[project.scripts]
agent-cli = "agent_engine.adapters.cli.main:main"
agent-web = "agent_engine.adapters.web_fastapi.app:serve"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_engine*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
